tests/rascal/negative/type_errors/L1/15_expression_ES10_D4_92.ob
MODULE Test15;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := (y + y);
               p := r;
               z := z;
               z := ((((y - 1) DIV (+ x)) - 200) + (((1223 * x) + (y - 200)) * z));
  (* error *)  r := (((1223 DIV (q - 200)) > (- 1)) OR ((~ p) & p));
               x := 0;
               r := q;
               r := p;
               y := (x DIV 1223);
               z := 1
END Test15.